--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.0.0"
+    "firebase-functions": "3.0.2"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
