--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "apn": "^2.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "3.0.2"
