--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 
 # misc
 .DS_Store
-.env.local
+.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -24,3 +24,6 @@ yarn-error.log*
 
 # firebase
 .firebase
+
+#PhpStorm
+/.idea
