--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "12.0.2",
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
+    "axios": "^0.19.0",
     "firebase": "^6.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
