--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - '12'
 script:
 - npm test
-- cd functions && npm test && cd ..
+- cd functions && npm install && npm test && cd ..
 deploy:
   provider: firebase
   token:
